--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -309,6 +309,9 @@ on post-fs-data
     # Set SELinux security contexts on upgrade or policy update.
     restorecon_recursive /data
 
+    # Check the timezone data in /data is newer than the copy in /system, delete if not.
+    exec u:r:tzdatacheck:s0 -- /system/bin/tzdatacheck /system/usr/share/zoneinfo /data/misc/zoneinfo
+
     # If there is no fs-post-data action in the init.<device>.rc file, you
     # must uncomment this line, otherwise encrypted filesystems
     # won't work.
