--- a/rootdir/ueventd.rc
+++ b/rootdir/ueventd.rc
@@ -101,6 +101,10 @@ subsystem adf
 /sys/devices/virtual/usb_composite/*   enable      0664  root   system
 /sys/devices/system/cpu/cpu*   cpufreq/scaling_max_freq   0664  system system
 /sys/devices/system/cpu/cpu*   cpufreq/scaling_min_freq   0664  system system
+/sys/class/leds/*   brightness  0664 system system
+/sys/class/leds/*   trigger     0664 system system
+/sys/class/leds/*   delay_on    0664 system system
+/sys/class/leds/*   delay_off   0664 system system
 
 # DVB API device nodes
 /dev/dvb*                 0660   root       system
