[DO NOT SUBMIT] Temporary AOSP boot fix
Change-Id: I0e044a4d180214a310602a942afcf9c6ead82d30

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -602,7 +602,7 @@ on boot
 
 on nonencrypted
     # A/B update verifier that marks a successful boot.
-    exec_start update_verifier_nonencrypted
+    # exec_start update_verifier_nonencrypted
     class_start main
     class_start late_start
 
