initrc: set ro.boot.slot_suffix property for backward compatibility
Command line parameter androidboot.slot_suffix was replaced with
androidboot.slot. Which also changes the ro.boot.slot_suffix property to
ro.boot.slot. To add backward compatibility during the transition we define
ro.boot.slot_suffix in any case.

Test: getprop ro.boot.slot ro.boot.slot_suffix
Bug:37663204
Change-Id: I90b942b4aeb8d0b33ef14da4a9730b46244ce99b
Signed-off-by: Fernando Lugo <flugo@google.com>

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -705,3 +705,6 @@ on property:ro.debuggable=1
 service flash_recovery /system/bin/install-recovery.sh
     class main
     oneshot
+
+on property:ro.boot.slot=*
+    setprop ro.boot.slot_suffix _${ro.boot.slot}
