init: change default permissions on /data/anr
Applications are now allowed to create files under /data/anr.
They are still prohibited by SELinux from reading files, opening
existing files and doing anything other than appending to the
files they create.

Bug: 32064548
Test: make, manual

Change-Id: I4fdba786c33697adb45df4559d11d1756783068f

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -452,7 +452,8 @@ on post-fs-data
     # the following directory.
     mkdir /data/mediadrm 0770 mediadrm mediadrm
 
-    mkdir /data/anr 0775 system system
+    mkdir /data/anr 0777 system system
+    chmod 0777 /data/anr
 
     # Create all remaining /data root dirs so that they are made through init
     # and get proper encryption policy installed
