--- a/logd/logd.rc
+++ b/logd/logd.rc
@@ -11,9 +11,11 @@ service logd /system/bin/logd
 service logd-reinit /system/bin/logd --reinit
     oneshot
     disabled
+    file /dev/kmsg w
     user logd
-    group logd
+    group logd system package_info
     writepid /dev/cpuset/system-background/tasks
+    class late_start
 
 on fs
     write /dev/event-log-tags "# content owned by logd
@@ -21,3 +23,11 @@ on fs
     chown logd logd /dev/event-log-tags
     chmod 0644 /dev/event-log-tags
     restorecon /dev/event-log-tags
+
+# Late starters can be used to trigger logd-reinit
+
+on property:init.svc.webview_zygote32=running
+    start logd-reinit
+
+on property:init.svc.webview_zygote64=running
+    start logd-reinit
