--- a/rootdir/ueventd.rc
+++ b/rootdir/ueventd.rc
@@ -122,6 +122,9 @@ subsystem sound
 /dev/mtp_usb              0660   root       mtp
 /dev/usb_accessory        0660   root       usb
 /dev/tun                  0660   system     vpn
+/dev/block/zram1          0640   system     system
+/dev/block/zram2          0640   system     system
+/dev/block/zram3          0640   system     system
 
 # CDMA radio interface MUX
 /dev/ts0710mux*           0640   radio      radio
@@ -129,6 +132,9 @@ subsystem sound
 
 # sysfs properties
 /sys/devices/platform/trusty.*      trusty_version        0440  root   log
+/sys/devices/virtual/block/zram1    disksize 0664 system system
+/sys/devices/virtual/block/zram2    disksize 0664 system system
+/sys/devices/virtual/block/zram3    disksize 0664 system system
 /sys/devices/virtual/input/input*   enable      0660  root   input
 /sys/devices/virtual/input/input*   poll_delay  0660  root   input
 /sys/devices/virtual/usb_composite/*   enable      0664  root   system
