Run boringssl_self_test during boot
The BoringSSL self check will need to run during startup
so that it can prevent the device from fully booting if
there is a failure.

Test: Built for walleye. After device booted examined dmesg and
      observed logs from init showing that the new service
      did start and exit successfully. Further, the service
      finished before the device booted past the boot animation.

Change-Id: Ie8e6cc761605a5261653c1e6ac36c3159fb69f1f

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -341,6 +341,9 @@ on post-fs
     start vold
     exec - system system -- /system/bin/vdc checkpoint markBootAttempt
 
+    # run a self check on boringssl for NIAP compliance
+    start boringssl_self_test
+
     # Once everything is setup, no need to modify /.
     # The bind+remount combination allows this to work in containers.
     mount rootfs rootfs / remount bind ro nodev
