--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -24,6 +24,11 @@ on early-init
     # Set the security context of /postinstall if present.
     restorecon /postinstall
 
+    # Create /dev/cg/cgroup.rc file
+    mkdir /dev/cg 0711 system system
+    copy /dev/null /dev/cg/cgroup.rc
+    chmod 0644 /dev/cg/cgroup.rc
+
     # Mount cgroup mount point for cpu accounting
     mount cgroup none /acct nodev noexec nosuid cpuacct
     chmod 0555 /acct
