Add credstore directory
This CL adds a directory for the identity credential data store.  The
sensitive data there will all be encrypted by secure hardware (TEE, SE
or SPU), but we still want to lock it down to be readable only by the
credential store process.

Bug: 111446262
Test: Manually tested
Change-Id: Ic557817102c42996c86dde9715d96d99b1ee7880

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -451,6 +451,7 @@ on post-fs-data
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
     mkdir /data/misc/bluetooth/logs 0770 bluetooth bluetooth
     mkdir /data/misc/keystore 0700 keystore keystore
+    mkdir /data/misc/credstore 0700 credstore credstore
     mkdir /data/misc/gatekeeper 0700 system system
     mkdir /data/misc/keychain 0771 system system
     mkdir /data/misc/net 0750 root shell
