system: initial dmesgd implementation
dmesgd is a daemon for collection of non-fatal kernel error reports on
production devices. Its main purpose is to drop the syslog_read
permission from system_server by performing error log parsing in a
separate process.

Right now dmesgd just reimplements the corresponding part of
BootReceiver.java
(https://android.googlesource.com/platform/frameworks/base/+/e070aa86f2d72318adf4e9ee4d899f78da885cfc),
i.e. it only collects non-fatal reports from KFENCE and KASAN.
But in the future it can be extended to handle other types of errors
that need to be collected.

Bug: 215095687
Test: build and run dmesg_parser_test on device
Test: run dmesgd on a user device with injected kernel bugs
Change-Id: I65ff1ac08425946f3678d78c9a92c04f5ff8a733

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -657,11 +657,12 @@ on property:ro.product.cpu.abilist64=* && property:bootreceiver.enable=1
     # Set up a tracing instance for system_server to monitor error_report_end events.
     # These are sent by kernel tools like KASAN and KFENCE when a memory corruption
     # is detected. This is only needed for 64-bit systems.
-    mkdir /sys/kernel/tracing/instances/bootreceiver 0700 system system
+    mkdir /sys/kernel/tracing/instances/bootreceiver 0700 dmesgd system
     restorecon_recursive /sys/kernel/tracing/instances/bootreceiver
     write /sys/kernel/tracing/instances/bootreceiver/buffer_size_kb 1
     write /sys/kernel/tracing/instances/bootreceiver/trace_options disable_on_free
     write /sys/kernel/tracing/instances/bootreceiver/events/error_report/error_report_end/enable 1
+    start dmesgd
 
 on post-fs-data
 
