--- a/rootdir/init.usb.rc
+++ b/rootdir/init.usb.rc
@@ -44,6 +44,7 @@ on property:sys.usb.config=adb && property:sys.usb.configfs=0
     write /sys/class/android_usb/android0/idProduct 4EE7
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
+    write /dev/kmsg "test567, Hello11"
     start adbd
     setprop sys.usb.state ${sys.usb.config}
 
@@ -63,6 +64,7 @@ on property:sys.usb.config=accessory,adb && property:sys.usb.configfs=0
     write /sys/class/android_usb/android0/idProduct 2d01
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
+    write /dev/kmsg "test567, Hello12"
     start adbd
     setprop sys.usb.state ${sys.usb.config}
 
@@ -82,6 +84,7 @@ on property:sys.usb.config=audio_source,adb && property:sys.usb.configfs=0
     write /sys/class/android_usb/android0/idProduct 2d03
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
+    write /dev/kmsg "test567, Hello13"
     start adbd
     setprop sys.usb.state ${sys.usb.config}
 
@@ -101,6 +104,7 @@ on property:sys.usb.config=accessory,audio_source,adb && property:sys.usb.config
     write /sys/class/android_usb/android0/idProduct 2d05
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
+    write /dev/kmsg "test567, Hello15"
     start adbd
     setprop sys.usb.state ${sys.usb.config}
 
