--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -799,6 +799,8 @@ on post-fs-data
     mkdir /data/misc/wmtrace 0700 system system
     # create location to store accessibility trace files
     mkdir /data/misc/a11ytrace 0700 system system
+    # create location to store MSKP files captured from RenderEngine
+    mkdir /data/misc/mskps 0700 system system
     # profile file layout
     mkdir /data/misc/profiles 0771 system system
     mkdir /data/misc/profiles/cur 0771 system system
@@ -1267,6 +1269,8 @@ on property:ro.debuggable=1
     chmod 0777 /data/misc/wmtrace
     # Give reads to anyone for the accessibility trace folder on debug builds.
     chmod 0775 /data/misc/a11ytrace
+    # Give reads to anyone for the MSKP folder on debug builds.
+    chmod 0775 /data/misc/mskps
 
 on init && property:ro.debuggable=1
     start console
